# sciter-starter

./: .gitignore  Readme.md  Tupfile  install.sh  main.cpp  sciter-starter.py
build-linux/: tup.config
build-win/: tup.config
config/: linux.conf  meson.build  windows.conf
ide/vscode/: c_cpp_properties.json
ui/: main.html  style.css
